<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9A9A9"
    tools:context="com.example.arianad.businesscard.Business">

    <TextView
        android:id="@+id/txtTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017"
        android:layout_above="@+id/txtItem1"
        android:layout_alignLeft="@+id/txtItem4"
        android:layout_alignStart="@+id/txtItem4"
        android:layout_marginBottom="14dp" />

    <TextView
        android:id="@+id/txtItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItem1"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintVertical_bias="0.144"
        android:layout_above="@+id/txtItem2"
        android:layout_alignLeft="@+id/txtTitle2"
        android:layout_alignStart="@+id/txtTitle2"
        android:layout_marginBottom="13dp" />

    <TextView
        android:id="@+id/txtItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItem2"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234"
        android:layout_above="@+id/txtItem3"
        android:layout_alignLeft="@+id/txtItem3"
        android:layout_alignStart="@+id/txtItem3"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/txtItem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItem3"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315"
        android:layout_above="@+id/txtItem4"
        android:layout_alignLeft="@+id/txtItem1"
        android:layout_alignStart="@+id/txtItem1"
        android:layout_marginBottom="18dp" />

    <TextView
        android:id="@+id/txtItem4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItem4"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="14dp"
        app:layout_constraintHorizontal_bias="0.036"
        android:layout_above="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="335dp"
        android:layout_height="255dp"
        app:srcCompat="@drawable/claudeen"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="236dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp" />

</RelativeLayout>
